photo-grid 320 gap fix

--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -6,3 +6,9 @@
     gap: 16px;
     font-size: 0;
 }
+
+@media screen and (max-width: 767px) {
+    .photo-grid__list {
+        gap: 12px;
+    }
+}
